# eaglefiler-metadata-haskell

./: README.md  eaglefiler-export-csv.applescript  eaglefiler-metadata.cabal  stack.yaml
src/EagleFiler/: Metadata.hs
